2006-09-28 20:38-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: Added search field and drop down
	for loading reading and subclassing.
	* GormCore/GormClassManager.m: Removed sorting from allSuperclassesOf:
	* GormCore/GormDocument.m: Added delegate method for search field.
	Implemments suggestions in bug#17802 (Change request).

2006-09-28 00:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/Defaults.plist: Make the browser classes view the default.

2006-09-28 00:36-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m: Correct problem which caused
	class inspector to loose focus.
	* GormInfo.plist: Update version to reflect SVN.
	* GormPrefs/GormGuidelinePref.m: Eliminate warning.

2006-09-27 22:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m: Sort classnames in subClassesOf:,
	allSuperclassesOf:, allSubclassesOf:, allCustomSubClassesOf:.

2006-09-13 23:19-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/1Windows/GNUmakefile: Added new classes and interface.
	* Palettes/1Windows/GormDrawerAttributesInspector.gorm: Inspector 
	interface.
	* Palettes/1Windows/GormDrawerAttributesInspector.[hm]: Inspector.
	* Palettes/1Windows/inspectors.m: Added implementation for
	inspectorClassName.

2006-09-12 23:10-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormWindowEditor.m: Remove IBApplicationAdditions category.
	* Palettes/1Windows/DrawerSmall.tiff: icon for NSDrawer in objects 
	view.
	* Palettes/1Windows/Drawer.tiff: Icon for drawer on palette
	* Palettes/1Windows/GNUmakefile: Added new files.
	* Palettes/1Windows/inspectors.m: Add IBApplicationAdditions category
	for NSWindow (from GormWindowEditor above) and add category for
	NSDrawer.
	* Palettes/1Windows/WindowsPalette.h: Moved interface for 
	WindowsPalette here.
	* Palettes/1Windows/WindowsPalette.m: Removed interface and added
	#include